fix: 💄 make card heading readable

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -58,3 +58,7 @@ code {
     border: 1px solid $danger;
   }
 }
+
+.card .h5 {
+  text-shadow: none;
+}
